FIX styles (horiz scrollbar and breakWords in todo)

--- a/src/styles/singleTodo.css
+++ b/src/styles/singleTodo.css
@@ -1,5 +1,6 @@
 .todos__single {
   display: flex;
+  word-break: break-all;
   border-radius: 5px;
   padding: 20px;
   margin-top: 15px;
